fixing z-index on nav

--- a/css/components.css
+++ b/css/components.css
@@ -19,6 +19,7 @@
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 5;
 }
 
 .nav .logo{
